--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.7.4",
     "firebase": "^10.13.0",
     "localforage": "^1.10.0",
+    "lodash.debounce": "^4.0.8",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "react-use": "^17.5.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.4"
   },
