--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.26.0",
     "react-use": "^17.5.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.12.4"
+    "sweetalert2": "^11.12.4",
+    "use-debounce": "^10.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
